1998-04-29  Paul Eggert

	* NEWS, src/grep.1: Describe new -a and -d options.

	* src/grep.c (long_options, usage, main):
	New options -d or --directories and -a or --text.
	(directories, always_text): New variables.
	(IS_DIRECTORY_ERRNO): New macro.
	(reset): Now returns value specifying whether to skip this file.
	Stat the file if either mmap or directory-skipping is possible.
	Skip the file if it's a directory and we're skipping directories.
	(grep): Skip the file if `reset' tells us to.
	(main): If open fails because the file is a directory, and if we're
	skipping directories, don't report an error.
	Remove special case for DOS and Windows.

	* src/dosbuf.c (guess_type): Use the same method for guessing whether a
	file is binary as grep.c's grep does.
	There's no longer any need to declare `bp' to be unsigned.

1998-04-26 Alain Magloire

	* grep-2.2 release.

	* src/dfa.c: Wrong revision was pulled out
	for beta 2.1.1d.
	* src/search.c: Wrong revision was pulled out
	for beta 2.1.1d.

	* src/grep.c: ck_atoi () added instead of atoi ().
	Suggestion from Jim Meyering.
	ck_atoi () pulled from diffutils-2.7, maintained by Paul Eggert.

	* AUTHORS: Rephrase of some sentences.
	* README:  Rewording.
	Noted and patched by Joel N. Weber II.

1998-04-17 Kaveh R. Ghazi

	* src/dfa.h: Don't define `const', trust autoconf to handle it.

1998-04-16 Alain Magloire

	* tests/{status,empty}.sh: wrong return status.

	* src/grep.c: Remove the REGEX part in usage (), it was
	consider overkill by most.

1998-04-14  Eli Zaretskii

	* djgpp/config.bat: Support file names with multiple dots on all
	platforms.

	* djgpp/README: Add instructions about file names illegal on
	MS-DOS.

1998-04-13 Alain Magloire

	* src/dfa.c: by "popular" demand reverse
	back to '_' not word-constituent.

	* grep-1.1.1c available for testing.

1998-04-13  Karl Heuer

	* src/grep.c: (a) The directory check is done too early:
	logically, if the argument is "-", then it refers to standard